# django-nocreatedb-test-runner

./: manage.py  pyproject.toml
pg_prodtest/: asgi.py  settings.py  test_runner.py  urls.py  wsgi.py
pg_prodtest/log/: models.py  test2.py  tests.py  urls.py
pg_prodtest/log/migrations/: 0001_initial.py  0002_logentry_updated.py  0003_auto_20220511_1000.py
