[tool.poetry]
name = "pg_same_db_for_tests"
version = "0.1.0"
description = "Research if testing django in production db is possible without interfering with production tables"
authors = ["Nurono <while0pass@yandex.ru>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.8"
django = "~3.1"
psycopg2-binary = "^2.9.3"
ipython = "^8.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
